--- a/MauiApp1/MauiApp1/Components/ProjectComponents/OperationFormular.razor.css
+++ b/MauiApp1/MauiApp1/Components/ProjectComponents/OperationFormular.razor.css
@@ -1,9 +1,9 @@
-﻿.tool-container {
-    background: #ADB5BD;
-    border-radius: 4px;
-    overflow: hidden;
-    box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+﻿
+.tool-container {
+    width: 100%;
+    background-color: #B8BFC6;
 }
+
 
 .tool-header {
     background: #707070;
